// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddFieldAction > add field to existing entity type (with existing fields) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddFieldAction > add field to existing entity type (with existing fields) 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`AddFieldAction > add field to existing entity type (without any fields) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddFieldAction > add field to existing entity type (without any fields) 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`AddFieldAction > add field to existing value type (with existing fields) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "value",
      "name": "Foo",
      "status": "changed",
    },
  ],
}
`;

exports[`AddFieldAction > add field to existing value type (with existing fields) 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`AddFieldAction > add field to existing value type (without any fields) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "value",
      "name": "Foo",
      "status": "changed",
    },
  ],
}
`;

exports[`AddFieldAction > add field to existing value type (without any fields) 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`AddIndexAction > add index to empty schema 1`] = `
{
  "activeSelector": {
    "kind": "index",
    "name": "myIndex",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [
    {
      "name": "myIndex",
      "status": "new",
      "type": "unique",
    },
  ],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddIndexAction > add index to empty schema 2`] = `
{
  "indexes": [
    {
      "name": "myIndex",
      "type": "unique",
    },
  ],
}
`;

exports[`AddPatternAction > add pattern to empty schema 1`] = `
{
  "activeSelector": {
    "kind": "pattern",
    "name": "my-pattern",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [],
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
      "status": "new",
    },
  ],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddPatternAction > add pattern to empty schema 2`] = `
{
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
    },
  ],
}
`;

exports[`AddTypeAction > add entity type to empty schema 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Foo",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddTypeAction > add entity type to empty schema 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`AddTypeAction > add entity type to schema with existing type 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Bar",
      "nameField": null,
      "status": "new",
    },
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddTypeAction > add entity type to schema with existing type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Bar",
      "nameField": null,
    },
  ],
}
`;

exports[`AddTypeAction > add two entity types (orders) 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Anaconda",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Anaconda",
      "nameField": null,
      "status": "new",
    },
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "ZooKeeper",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddTypeAction > add two entity types (orders) 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Anaconda",
      "nameField": null,
    },
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "ZooKeeper",
      "nameField": null,
    },
  ],
}
`;

exports[`AddTypeAction > add two value types (orders) 1`] = `
{
  "activeSelector": {
    "kind": "value",
    "typeName": "Anaconda",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "kind": "value",
      "name": "Anaconda",
      "status": "new",
    },
    {
      "adminOnly": false,
      "fields": [],
      "kind": "value",
      "name": "ZooKeeper",
      "status": "new",
    },
  ],
}
`;

exports[`AddTypeAction > add two value types (orders) 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "Anaconda",
    },
    {
      "adminOnly": false,
      "fields": [],
      "name": "ZooKeeper",
    },
  ],
}
`;

exports[`AddTypeAction > add value type to empty schema 1`] = `
{
  "activeSelector": {
    "kind": "value",
    "typeName": "Foo",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "kind": "value",
      "name": "Foo",
      "status": "new",
    },
  ],
}
`;

exports[`AddTypeAction > add value type to empty schema 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "Foo",
    },
  ],
}
`;

exports[`AddTypeAction > add value type to schema with existing type 1`] = `
{
  "activeSelector": {
    "kind": "value",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "kind": "value",
      "name": "Bar",
      "status": "new",
    },
    {
      "adminOnly": false,
      "fields": [],
      "kind": "value",
      "name": "Foo",
      "status": "",
    },
  ],
}
`;

exports[`AddTypeAction > add value type to schema with existing type 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "Bar",
    },
  ],
}
`;

exports[`ChangeFieldAdminOnlyAction > make new field admin only in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": true,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAdminOnlyAction > make new field admin only in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": true,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldAllowedEntityTypesAction > change entity types of a new entity field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Foo",
          ],
          "list": false,
          "name": "foo",
          "required": false,
          "status": "new",
          "type": "Entity",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAllowedEntityTypesAction > change entity types of a new entity field 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Foo",
          ],
          "name": "foo",
          "required": false,
          "type": "Entity",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldAllowedLinkEntityTypesAction > change link entity types of a new entity field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "linkEntityTypes": [
            "Foo",
          ],
          "list": false,
          "name": "foo",
          "required": false,
          "richTextNodes": [],
          "status": "new",
          "type": "RichText",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAllowedLinkEntityTypesAction > change link entity types of a new entity field 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "linkEntityTypes": [
            "Foo",
          ],
          "name": "foo",
          "required": false,
          "richTextNodes": [],
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldAllowedRichTextNodesAction > change node types (add entity) of a new rich text field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Foo",
          ],
          "list": false,
          "name": "foo",
          "required": false,
          "richTextNodes": [
            "root, paragraph, text, linebreak",
            "entity",
          ],
          "status": "new",
          "type": "RichText",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAllowedRichTextNodesAction > change node types (add entity) of a new rich text field 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Foo",
          ],
          "linkEntityTypes": [],
          "name": "foo",
          "required": false,
          "richTextNodes": [
            "root",
            "paragraph",
            "text",
            "linebreak",
            "entity",
          ],
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldAllowedRichTextNodesAction > change node types (add entity) of an existing rich text field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "existingRichTextNodesWithPlaceholders": [
            "root, paragraph, text, linebreak",
            "heading",
          ],
          "linkEntityTypes": [],
          "list": false,
          "name": "rt",
          "required": false,
          "richTextNodes": [
            "root, paragraph, text, linebreak",
            "heading",
            "entity",
          ],
          "status": "changed",
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAllowedRichTextNodesAction > change node types (add entity) of an existing rich text field 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "linkEntityTypes": [],
          "name": "rt",
          "required": false,
          "richTextNodes": [
            "root",
            "paragraph",
            "text",
            "linebreak",
            "heading",
            "entity",
          ],
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldAllowedValueTypesAction > change entity types of a new entity field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "foo",
          "required": false,
          "status": "new",
          "type": "ValueItem",
          "valueTypes": [
            "Foo",
          ],
        },
      ],
      "kind": "value",
      "name": "Foo",
      "status": "changed",
    },
  ],
}
`;

exports[`ChangeFieldAllowedValueTypesAction > change entity types of a new entity field 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "name": "foo",
          "required": false,
          "type": "ValueItem",
          "valueTypes": [
            "Foo",
          ],
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldIndexAction > set index on new string field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "anIndex",
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "existing",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "index": "anIndex",
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [
    {
      "name": "anIndex",
      "status": "",
      "type": "unique",
    },
  ],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldIndexAction > set index on new string field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "anIndex",
          "matchPattern": null,
          "multiline": false,
          "name": "existing",
          "required": false,
          "type": "String",
        },
        {
          "adminOnly": false,
          "index": "anIndex",
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldIntegerAction > make new integer field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "integer": true,
          "list": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "Number",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldIntegerAction > make new integer field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "integer": true,
          "name": "bar",
          "required": false,
          "type": "Number",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldMatchPattern > set pattern on new string field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "matchPattern": "aPattern",
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldMatchPattern > set pattern on new string field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": "aPattern",
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldMultilineAction > make new multiline field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": true,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldMultilineAction > make new multiline field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": true,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldRequiredAction > make new field required in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": true,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldRequiredAction > make new field required in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": true,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to entity (new field of existing entity type) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "list": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "Entity",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldTypeAction > from string to entity (new field of existing entity type) 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "name": "bar",
          "required": false,
          "type": "Entity",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to location list (new field of existing entity type) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": true,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "Location",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldTypeAction > from string to location list (new field of existing entity type) 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "list": true,
          "name": "bar",
          "required": false,
          "type": "Location",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to location list (new field of existing value type) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": true,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "Location",
        },
      ],
      "kind": "value",
      "name": "Foo",
      "status": "changed",
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to location list (new field of existing value type) 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": true,
          "name": "bar",
          "required": false,
          "type": "Location",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to number (new field of existing value type) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "integer": false,
          "list": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "Number",
        },
      ],
      "kind": "value",
      "name": "Foo",
      "status": "changed",
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to number (new field of existing value type) 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "integer": false,
          "name": "bar",
          "required": false,
          "type": "Number",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldTypeAction > from string to value (new field of existing entity type) 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "ValueItem",
          "valueTypes": [],
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldTypeAction > from string to value (new field of existing entity type) 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "name": "bar",
          "required": false,
          "type": "ValueItem",
          "valueTypes": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangePatternPatternAction > change pattern of new pattern 1`] = `
{
  "activeSelector": {
    "kind": "pattern",
    "name": "foo",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [],
  "patterns": [
    {
      "name": "foo",
      "pattern": "^this is a new pattern$",
      "status": "new",
    },
  ],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangePatternPatternAction > change pattern of new pattern 2`] = `
{
  "patterns": [
    {
      "name": "foo",
      "pattern": "^this is a new pattern$",
    },
  ],
}
`;

exports[`ChangeTypeAdminOnlyAction > make new entity type admin only 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Foo",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [
    {
      "adminOnly": true,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeTypeAdminOnlyAction > make new entity type admin only 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": true,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`ChangeTypeAuthKeyPatternAction > change pattern for new entity type 1`] = `
{
  "activeSelector": {
    "kind": "pattern",
    "name": "my-pattern",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "my-pattern",
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
      "status": "new",
    },
  ],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeTypeAuthKeyPatternAction > change pattern for new entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "my-pattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
    },
  ],
}
`;

exports[`ChangeTypeNameField > make new string the name field in new type 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "TitleOnly",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "nameField": "title",
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeTypeNameField > make new string the name field in new type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
      ],
      "name": "TitleOnly",
      "nameField": "title",
    },
  ],
}
`;

exports[`ChangeTypeNameField > make other field is-name, and switch back 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": "title",
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "other",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "nameField": "other",
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeTypeNameField > make other field is-name, and switch back 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "other",
          "required": false,
          "type": "String",
        },
      ],
      "name": "TitleOnly",
      "nameField": "other",
    },
  ],
}
`;

exports[`ChangeTypeNameField > make other field is-name, and switch back 3`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": "title",
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "other",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "nameField": "title",
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`DeleteFieldAction > add and delete field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`DeleteFieldAction > add field, set as name field and delete field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`DeleteTypeAction > delete newly added entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`DeleteTypeAction > delete newly added value type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`RenameFieldAction > add and rename field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "baz",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameFieldAction > add and rename field 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "baz",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
}
`;

exports[`RenameFieldAction > add field, set as name field and rename 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "multiline": false,
          "name": "baz",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": "baz",
      "status": "changed",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameFieldAction > add field, set as name field and rename 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "matchPattern": null,
          "multiline": false,
          "name": "baz",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": "baz",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename entity type with fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Bar",
          ],
          "linkEntityTypes": undefined,
          "list": false,
          "name": "self",
          "required": false,
          "status": "new",
          "type": "Entity",
        },
      ],
      "kind": "entity",
      "name": "Bar",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameTypeAction > add and rename entity type with fields referring to itself 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Bar",
          ],
          "name": "self",
          "required": false,
          "type": "Entity",
        },
      ],
      "name": "Bar",
      "nameField": null,
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename entity type with link fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": undefined,
          "linkEntityTypes": [
            "Bar",
          ],
          "list": false,
          "name": "self",
          "required": false,
          "richTextNodes": [],
          "status": "new",
          "type": "RichText",
        },
      ],
      "kind": "entity",
      "name": "Bar",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameTypeAction > add and rename entity type with link fields referring to itself 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "linkEntityTypes": [
            "Bar",
          ],
          "name": "self",
          "required": false,
          "richTextNodes": [],
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "name": "Bar",
      "nameField": null,
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename type 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Bar",
      "nameField": null,
      "status": "new",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameTypeAction > add and rename type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Bar",
      "nameField": null,
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename value type with fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "value",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "self",
          "required": false,
          "status": "new",
          "type": "ValueItem",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "kind": "value",
      "name": "Bar",
      "status": "new",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename value type with fields referring to itself 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "name": "self",
          "required": false,
          "type": "ValueItem",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "name": "Bar",
    },
  ],
}
`;

exports[`SchemaEditorReducer scenarios > add type, save, force update 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "NewType",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "NewType",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "NewType",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`SetActiveSelectorAction > set to type 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Foo",
  },
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`SetActiveSelectorAction > set to type with editor scroll 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Foo",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > add empty schema 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > entity type field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "EntityReference",
          ],
          "existingFieldSpec": {
            "adminOnly": false,
            "entityTypes": [
              "EntityReference",
            ],
            "list": false,
            "name": "reference",
            "required": false,
            "type": "Entity",
          },
          "list": false,
          "name": "reference",
          "required": false,
          "status": "",
          "type": "Entity",
        },
      ],
      "kind": "entity",
      "name": "EntityReference",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "entityTypes": [
                "EntityReference",
              ],
              "list": false,
              "name": "reference",
              "required": false,
              "type": "Entity",
            },
          ],
          "name": "EntityReference",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [
        {
          "adminOnly": false,
          "fields": [
            {
              "adminOnly": false,
              "entityTypes": [
                "EntityReference",
              ],
              "list": false,
              "name": "reference",
              "required": false,
              "type": "Entity",
            },
          ],
          "name": "ValueReference",
        },
      ],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "EntityReference",
          ],
          "existingFieldSpec": {
            "adminOnly": false,
            "entityTypes": [
              "EntityReference",
            ],
            "list": false,
            "name": "reference",
            "required": false,
            "type": "Entity",
          },
          "list": false,
          "name": "reference",
          "required": false,
          "status": "",
          "type": "Entity",
        },
      ],
      "kind": "value",
      "name": "ValueReference",
      "status": "",
    },
  ],
}
`;

exports[`UpdateSchemaSpecificationAction > entity type with auth key pattern 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "patternOne",
      "existingNameField": null,
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "patternOne",
      "pattern": "^foo$",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": "patternOne",
          "fields": [],
          "name": "Foo",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [
        {
          "name": "patternOne",
          "pattern": "^foo$",
        },
      ],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > entity type with index and one index 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "index": "myIndex",
            "list": false,
            "matchPattern": null,
            "multiline": false,
            "name": "bar",
            "required": false,
            "type": "String",
            "values": [],
          },
          "index": "myIndex",
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [
    {
      "name": "myIndex",
      "status": "",
      "type": "unique",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "index": "myIndex",
              "list": false,
              "matchPattern": null,
              "multiline": false,
              "name": "bar",
              "required": false,
              "type": "String",
              "values": [],
            },
          ],
          "name": "Foo",
          "nameField": null,
        },
      ],
      "indexes": [
        {
          "name": "myIndex",
          "type": "unique",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > one entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": "title",
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "index": null,
            "list": false,
            "matchPattern": null,
            "multiline": false,
            "name": "title",
            "required": false,
            "type": "String",
            "values": [],
          },
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "nameField": "title",
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "index": null,
              "list": false,
              "matchPattern": null,
              "multiline": false,
              "name": "title",
              "required": false,
              "type": "String",
              "values": [],
            },
          ],
          "name": "TitleOnly",
          "nameField": "title",
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > one entity type with number fields 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "integer": false,
            "list": false,
            "name": "float",
            "required": false,
            "type": "Number",
          },
          "integer": false,
          "list": false,
          "name": "float",
          "required": false,
          "status": "",
          "type": "Number",
        },
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "integer": true,
            "list": false,
            "name": "integer",
            "required": false,
            "type": "Number",
          },
          "integer": true,
          "list": false,
          "name": "integer",
          "required": false,
          "status": "",
          "type": "Number",
        },
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "integer": false,
            "list": true,
            "name": "floats",
            "required": false,
            "type": "Number",
          },
          "integer": false,
          "list": true,
          "name": "floats",
          "required": false,
          "status": "",
          "type": "Number",
        },
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "integer": true,
            "list": true,
            "name": "integers",
            "required": false,
            "type": "Number",
          },
          "integer": true,
          "list": true,
          "name": "integers",
          "required": false,
          "status": "",
          "type": "Number",
        },
      ],
      "kind": "entity",
      "name": "Numbers",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "integer": false,
              "list": false,
              "name": "float",
              "required": false,
              "type": "Number",
            },
            {
              "adminOnly": false,
              "integer": true,
              "list": false,
              "name": "integer",
              "required": false,
              "type": "Number",
            },
            {
              "adminOnly": false,
              "integer": false,
              "list": true,
              "name": "floats",
              "required": false,
              "type": "Number",
            },
            {
              "adminOnly": false,
              "integer": true,
              "list": true,
              "name": "integers",
              "required": false,
              "type": "Number",
            },
          ],
          "name": "Numbers",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > one entity type with rich text field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "existingFieldSpec": {
            "adminOnly": false,
            "entityTypes": [],
            "linkEntityTypes": [],
            "list": false,
            "name": "richText",
            "required": false,
            "richTextNodes": [
              "entity",
              "linebreak",
              "list",
              "listitem",
              "paragraph",
              "root",
              "text",
            ],
            "type": "RichText",
            "valueTypes": [],
          },
          "existingRichTextNodesWithPlaceholders": [
            "root, paragraph, text, linebreak",
            "list, listitem",
            "entity",
          ],
          "linkEntityTypes": [],
          "list": false,
          "name": "richText",
          "required": false,
          "richTextNodes": [
            "root, paragraph, text, linebreak",
            "list, listitem",
            "entity",
          ],
          "status": "",
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "entityTypes": [],
              "linkEntityTypes": [],
              "list": false,
              "name": "richText",
              "required": false,
              "richTextNodes": [
                "entity",
                "linebreak",
                "list",
                "listitem",
                "paragraph",
                "root",
                "text",
              ],
              "type": "RichText",
              "valueTypes": [],
            },
          ],
          "name": "TitleOnly",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > one entity type with string field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "index": null,
            "list": false,
            "matchPattern": "aPattern",
            "multiline": true,
            "name": "string",
            "required": false,
            "type": "String",
            "values": [],
          },
          "index": null,
          "list": false,
          "matchPattern": "aPattern",
          "multiline": true,
          "name": "string",
          "required": false,
          "status": "",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "String",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^a-pattern$",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "index": null,
              "list": false,
              "matchPattern": "aPattern",
              "multiline": true,
              "name": "string",
              "required": false,
              "type": "String",
              "values": [],
            },
          ],
          "name": "String",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [
        {
          "name": "aPattern",
          "pattern": "^a-pattern$",
        },
      ],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > one value type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [],
      "indexes": [],
      "patterns": [],
      "valueTypes": [
        {
          "adminOnly": false,
          "fields": [
            {
              "adminOnly": false,
              "index": null,
              "list": false,
              "matchPattern": null,
              "multiline": false,
              "name": "title",
              "required": false,
              "type": "String",
              "values": [],
            },
          ],
          "name": "TitleOnly",
        },
      ],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "index": null,
            "list": false,
            "matchPattern": null,
            "multiline": false,
            "name": "title",
            "required": false,
            "type": "String",
            "values": [],
          },
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
      ],
      "kind": "value",
      "name": "TitleOnly",
      "status": "",
    },
  ],
}
`;

exports[`UpdateSchemaSpecificationAction > value type field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "existingNameField": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "list": false,
            "name": "valueItem",
            "required": false,
            "type": "ValueItem",
            "valueTypes": [
              "ValueItem",
            ],
          },
          "list": false,
          "name": "valueItem",
          "required": false,
          "status": "",
          "type": "ValueItem",
          "valueTypes": [
            "ValueItem",
          ],
        },
      ],
      "kind": "entity",
      "name": "EntityWithValueItem",
      "nameField": null,
      "status": "",
    },
  ],
  "indexes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "cachedPublishedSchema": null,
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "adminOnly": false,
              "list": false,
              "name": "valueItem",
              "required": false,
              "type": "ValueItem",
              "valueTypes": [
                "ValueItem",
              ],
            },
          ],
          "name": "EntityWithValueItem",
          "nameField": null,
        },
      ],
      "indexes": [],
      "patterns": [],
      "valueTypes": [
        {
          "adminOnly": false,
          "fields": [
            {
              "adminOnly": false,
              "list": false,
              "name": "valueItem",
              "required": false,
              "type": "ValueItem",
              "valueTypes": [
                "ValueItem",
              ],
            },
          ],
          "name": "ValueItem",
        },
      ],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "adminOnly": false,
            "list": false,
            "name": "valueItem",
            "required": false,
            "type": "ValueItem",
            "valueTypes": [
              "ValueItem",
            ],
          },
          "list": false,
          "name": "valueItem",
          "required": false,
          "status": "",
          "type": "ValueItem",
          "valueTypes": [
            "ValueItem",
          ],
        },
      ],
      "kind": "value",
      "name": "ValueItem",
      "status": "",
    },
  ],
}
`;

exports[`initializeSchemaEditorState > no args 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [],
  "indexes": [],
  "patterns": [],
  "schema": null,
  "schemaWillBeUpdatedDueToSave": false,
  "status": "uninitialized",
  "valueTypes": [],
}
`;
